@@ -912,7 +912,7 @@
 </div>
 
 #^/wrap-all-chart	<!--	ALL CHARTS WRAPPER	-->	
-	<div class="wrap_transaction">
+	<div class="wrap_transaction overview">
 		<div class="header_section collapsable">
 			Financial Overview
 			<div class="wrap_length">
