@@ -1,7 +1,7 @@
 Static site (2024-01-23 shi)
 ==============================
 Update dquery examples
-Add comments to dquery exmaples
+Add comments to dquery examples
 
 
 Static site (2024-01-19 shi)
