@@ -2,6 +2,7 @@ Development Portal (2024-03-07 shi)
 ==============================
 Add mention links for publisher and participating-org #661
 Update all translation pages
+Update transaction overview css for SAVi
 
 
 Development Portal (2024-01-23 shi)
